AC_INIT(snflow, 0.1, snflow@htols.net)

AC_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC

# Checks for header files.
AC_CHECK_HEADERS(netinet6/in6.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T

AC_OUTPUT(Makefile)
